updated node, fixed layout shift on chrome mobile

--- a/my-next-app/app/globals.css
+++ b/my-next-app/app/globals.css
@@ -14,12 +14,6 @@
   border: 3px solid rgb(0, 0, 0);
 }
 
-/* Styling for Firefox */
-body {
-  scrollbar-width: thin;
-  scrollbar-color: rgba(255, 255, 255, 0.5) rgb(0, 0, 0); /* Thumb and track color */
-}
-
 
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -59,6 +53,7 @@ body {
 html,
 body {
   max-width: 1800px;
+
 }
 
 body {
