--- a/my-next-app/styles/footer.scss
+++ b/my-next-app/styles/footer.scss
@@ -1,12 +1,13 @@
 .footer {
     position: relative;
-    z-index: 5;
+    z-index: 65;
     background-color: #282828;
     width:100%;
     display: flex;
     flex-direction:column;
     align-items:center;
     height: 185px;
+
 }
 .footer-svg-up{
     background: #FA4D31;
