--- a/my-next-app/styles/index.css
+++ b/my-next-app/styles/index.css
@@ -539,6 +539,8 @@ canvas {
     align-items: center;
     width: 100%;
     height: auto;
+    overflow-x: auto;
+
 }
 
 
